# bigga

./: .bigga.json  .dockerignore  .env-sample  MANIFEST.in  Pipfile  README.md  S3_FRONTEND_DEPLOYMENT.md  TROUBLESHOOT.md  TROUBLESHOOTING.md  docker-compose.yml  invoke.yml  pyproject.toml  setup.cfg  setup.py  tasks.py  zombie.py
Bigga/: Backend.md  Docker-container-basics.md  README.md
backend/: README.md
bigga/: bigga.py  cli.py  config.py  main.py  tasks.py
bigga/contrib/fabtools/: __init__.py  user.py
bigga/contrib/fabtools/require/: __init__.py
bigga/contrib/patchwork/: info.py
bigga/data/: .infra.json
coffeemachine/: README.rst
docs/: Backend-Auto-Deployment.md  Backend.md  Frontend.md  README.md  another-rds-instance.md  docker-machine-create.md  recreate-rds.md
docs/source/: conf.py  index.rst
ngfrontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
ngfrontend/src/app/: app.component.html  app.component.ts  app.module.ts
scripts/: deploy.sh  docker-machie-create.sh  sync.sh
solr/: Dockerfile  managed-schema  schema.xml
ssrfrontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
ssrfrontend/e2e/src/: app.e2e-spec.ts
ssrfrontend/src/: index.html
ssrfrontend/src/app/: app.component.spec.ts  app.component.ts
traefik/: Dockerfile  traefik.toml
